; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_log.c_log_set_max_level_realm.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_log.c_log_set_max_level_realm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOG_PRIMASK = common dso_local global i32 0, align 4
@log_max_level = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @log_set_max_level_realm(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @LOG_PRIMASK, align 4
  %7 = and i32 %5, %6
  %8 = load i32, i32* %4, align 4
  %9 = icmp eq i32 %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load i64, i64* %3, align 8
  %13 = load i32*, i32** @log_max_level, align 8
  %14 = call i64 @ELEMENTSOF(i32* %13)
  %15 = icmp ult i64 %12, %14
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32, i32* %4, align 4
  %19 = load i32*, i32** @log_max_level, align 8
  %20 = load i64, i64* %3, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  store i32 %18, i32* %21, align 4
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @ELEMENTSOF(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
